--- a/index.html
+++ b/index.html
@@ -5,11 +5,174 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/89fc10558f.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Leader Board</title>
 </head>
 
 <body>
+    <!-- header part -->
+    <Header>
+
+    </Header>
+    <!-- Top players & Players Blog part -->
+    <main>
+        <section class="container">
+            <h2 class="section-title">
+                Top Players
+            </h2>
+            <div class="top-players">
+
+                <div class="player">
+                    <img src="images/players/player-1.png" alt="">
+                    <h3 class="player-name">player-1</h3>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-2.png" alt="">
+                    <h3 class="player-name">player-2</h3>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-3.png" alt="">
+                    <h3 class="player-name">player-3</h3>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-4.png" alt="">
+                    <h3 class="player-name">player-4</h3>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-5.png" alt="">
+                    <h3 class="player-name">player-5</h3>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-6.png" alt="">
+                    <h3 class="player-name">player-6</h3>
+                </div>
+            </div>
+            <hr>
+            <div class="top-blogs">
+                <h2 class="section-title">
+                    Top Blog
+                </h2>
+                <div class="blogs">
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="images/blogs/blog-1.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">13 of My Favorite
+                                UI/UX Goodies</h3>
+                            <p class="blog-author">By<a href=""> Danny Sapio</a></p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="images/blogs/blog-2.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">UI cheat sheet:
+                                list vs grids</h3>
+                            <p class="blog-author">By<a href=""> Tess Gadd</a></p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="images/blogs/blog-3.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">7 typography tips
+                                for interface design</h3>
+                            <p class="blog-author">By<a href=""> Jeremiah Lam</a></p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="images/blogs/blog-4.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">Your logo is
+                                copied</h3>
+                            <p class="blog-author">By<a href=""> Ferdinand Vogler</a></p>
+                        </div>
+                    </article>
+                </div>
+            </div>
+        </section>
+
+        <section class="container">
+            <h2 class="section-title">
+                Lates Course
+            </h2>
+            <article class="latest-courses">
+                <div class="course">
+                    <img src="images/courses/course-1.png" alt="">
+                    <h3 class="blog-title">React - The Complete </h3>
+                    <h3 class="blog-title">Guide 2020</h3>
+                    <a href="">Reed Krakoff.</a>
+                    <div class="course-info">
+                        <div class="reatings">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                            <span class="blog-author">4.5</span>
+                        </div>
+
+                        <div class="clock">
+                            <i class="far fa-clock"></i>01.30hr
+                        </div>
+
+                    </div>
+
+                </div>
+                <div class="course">
+                    <img src="images/courses/course-2.png" alt="">
+                    <h3 class="blog-title">Powerpoint 2020 </h3>
+                    <h3 class="blog-title">Master Powerpoint Cour</h3>
+                    <a href="">Walter Scott</a>
+                    <div class="course-info">
+                        <div class="reatings">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                            <span class="blog-author">4.5</span>
+                        </div>
+
+                        <div class="clock">
+                            <i class="far fa-clock"></i>01.30hr
+                        </div>
+
+                    </div>
+
+                </div>
+                <div class="course">
+                    <img src="images/courses/course-3.png" alt="">
+                    <h3 class="blog-title">The Complete JavaScript </h3>
+                    <h3 class="blog-title">Course 2020</h3>
+                    <a href="">Reed Krakoff.</a>
+                    <div class="course-info">
+                        <div class="reatings">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                            <span class="blog-author">4.5</span>
+                        </div>
+
+                        <div class="clock">
+                            <i class="far fa-clock"></i>01.30hr
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </article>
+        </section>
+    </main>
 
 </body>
 
